@@ -35,3 +35,14 @@ isLeaf <- function(node) {
 isNotLeaf <- function(node) {
   !isLeaf(node)
 }
+
+
+
+changeName <- function(node, oldName, newName) {
+  if(!node$isRoot) {
+    rm(list = oldName, envir = node$parent)
+    names(node$parent$children)[node$position] <- newName
+    node$parent[[newName]] <- node
+  }
+  return (newName)
+}
